Thread safety of libmatrix was improved

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,15 +12,25 @@ set(library_sources
     MatrixIO.cpp
 )
 
+set(Boost_USE_STATIC_LIBS        ON) # only find static libs
+set(Boost_USE_MULTITHREADED      ON)
+set(Boost_USE_STATIC_RUNTIME    OFF)
+
+find_package(Boost
+    REQUIRED
+    COMPONENTS system thread
+)
+
 add_subdirectory(gsl ${CMAKE_BINARY_DIR}/gsl/ EXCLUDE_FROM_ALL)
 include_directories(gsl
                     ${CMAKE_BINARY_DIR}/gsl/)
 
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
+include_directories(${Boost_INCLUDE_DIRS})
 
 include(GenerateExportHeader)
 
 add_library(matrix STATIC ${library_sources})
-target_link_libraries(matrix gsl)
+target_link_libraries(matrix gsl ${Boost_LIBRARIES})
 generate_export_header(matrix)
 add_compiler_export_flags()
